--- a/litellm-config.yaml
+++ b/litellm-config.yaml
@@ -20,6 +20,13 @@ model_list:
         editor-version: "vscode/1.95.0"
         editor-plugin-version: "copilot-chat/0.26.7"
 
+  - model_name: github_copilot/claude-opus-4.5
+    litellm_params:
+      model: github_copilot/claude-opus-4.5
+      extra_headers:
+        editor-version: "vscode/1.95.0"
+        editor-plugin-version: "copilot-chat/0.26.7"
+
   - model_name: github_copilot/gemini-3-pro-preview
     litellm_params:
       model: github_copilot/gemini-3-pro-preview
