--- a/litellm-config.yaml
+++ b/litellm-config.yaml
@@ -11,7 +11,7 @@ litellm_settings:
   drop_params: true
 
 model_list:
-  - model_name: github_copilot/gpt-5.1-codex
+  - model_name: github-copilot/gpt-5.1-codex
     model_info:
       mode: responses
     litellm_params:
@@ -20,14 +20,23 @@ model_list:
         editor-version: "vscode/1.95.0"
         editor-plugin-version: "copilot-chat/0.26.7"
 
-  - model_name: github_copilot/claude-opus-4.5
+  - model_name: github-copilot/gpt-5.2
+    model_info:
+      mode: responses
+    litellm_params:
+      model: github_copilot/gpt-5.2
+      extra_headers:
+        editor-version: "vscode/1.95.0"
+        editor-plugin-version: "copilot-chat/0.26.7"
+
+  - model_name: github-copilot/claude-opus-4.5
     litellm_params:
       model: github_copilot/claude-opus-4.5
       extra_headers:
         editor-version: "vscode/1.95.0"
         editor-plugin-version: "copilot-chat/0.26.7"
 
-  - model_name: github_copilot/gemini-3-pro-preview
+  - model_name: github-copilot/gemini-3-pro-preview
     litellm_params:
       model: github_copilot/gemini-3-pro-preview
       extra_headers:
